Squashed commit of the following:
commit 0545f4b91f5610e37151e1ee30561e5888f83b1c
Author: Adam Strandberg <adamstrandberg@gmail.com>
Date:   Fri Feb 1 21:21:55 2019 -0500

    updated html on four most recent posts

--- a/_config.yml
+++ b/_config.yml
@@ -20,6 +20,7 @@ description: > # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "the-lagrangian.com" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: the_lagrangian
+github_username: the-lagrangian
 
 # Build settings
 markdown: kramdown
